@@ -1,4 +1,8 @@
 
+2020-12-07  Ron Norman <rjn@inglenet.com>
+
+	* common.c: Added cob_set_dump_signal for use by the Dump code
+
 2020-12-07  Simon Sobisch <simonsobisch@gnu.org>
 
 	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
